<resources>
    <string name="app_name">TodoList</string>

    <string name="todo_item_title">Title</string>
    <string name="todo_item_description">Description</string>
    <string name="todo_item_created_at">Created at</string>

    <string name="snack_bar_error_try_again">Try again!</string>
    <string name="error_something_went_wrong">Something went wrong.\nPlease, try again!</string>
    <string name="error_network_connection">Check your internet connection or try again later.</string>
    <string name="error_network_timeout">Unstable network at the moment, please try again later.</string>

    <string name="dialog_delete_item_title">Are u sure to delete todo item?</string>
    <string name="dialog_delete_item_agree">Yes, delete!</string>
    <string name="delete_delete_item_cancel">Cancel</string>
    <string name="delete_delete_item_success">Successfully deleted item!</string>
    <string name="delete_delete_item_error">Something went wrong during deleting item. Try again</string>
    <string name="add_item_success">Successfully added item!</string>
    <string name="add_item_error">Something went wrong during adding item. Try again</string>
    <string name="update_item_success">Successfully updated item!</string>
    <string name="update_item_error">Something went wrong during updating item. Try again</string>

    <string name="todo_item_new_title_label">Add New Todo Item</string>
    <string name="todo_item_edit_title_label">Edit Todo Item</string>
    <string name="todo_item_new_edit_title">Todo title</string>
    <string name="todo_item_new_edit_description">Todo description</string>
    <string name="todo_item_new_edit_icon_url">Todo ico url</string>
    <string name="todo_item_new_edit_submit">Submit</string>

</resources>