<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/whole_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:foreground="@drawable/button_ripple_foreground"
    card_view:cardBackgroundColor="@color/colorPrimary"
    card_view:cardCornerRadius="7dp"
    card_view:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <TextView
            android:id="@+id/todo_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/todo_item_title"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/todo_item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/todo_item_description"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="italic"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/todo_item_title" />

        <TextView
            android:id="@+id/todo_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/todo_item_created_at"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="italic"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/todo_item_description" />

        <ImageView
            android:id="@+id/todo_item_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>